<resources>
    <string name="app_name">ExampleCrudRestfulApi</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="user_id">User ID</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="last_data_updated">Last data updated:</string>
    <string name="userid">UserID:</string>
    <string name="created_at">Created at:</string>
    <string name="updated_at">Updated at</string>
    <string name="comments">Comments</string>
</resources>